--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -113,6 +113,7 @@ extra_css:
   - assets/stylesheets/interactive_graph.css
   - assets/stylesheets/embed_link.css
   - assets/stylesheets/custom.css
+  - assets/stylesheets/extra.css
   
 extra_javascript:
   - https://fastly.jsdelivr.net/npm/jquery/dist/jquery.min.js
